[package]
name = "twitch_streams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.15.0", features=["full"] }
twitch_api2 = { version="0.5.0", features=["all"] }
reqwest = { version="0.11.7" }
dialoguer = { version="0.9.0" }
confy = { version="0.4.0" }
serde = { version="1.0.131", features=["derive"] }

[[bin]]
name = "stwitch"
path = "src/main.rs"
